# mdtoepub

./: .gitignore  AGENTS.md  ARCHITECTURE.md  MANIFEST.in  README.md  build.sh  bump_version.sh  com.github.mdtoepub.yml  pyproject.toml  run.sh
data/: com.github.mdtoepub.desktop  com.github.mdtoepub.metainfo.xml
mdtoepub/: i18n.py  main.py
mdtoepub/controllers/: export_import.py  project_manager.py
mdtoepub/data/sample_book/: project.yaml
mdtoepub/data/sample_book_en/: project.yaml
mdtoepub/data/sample_book_textbook/: project.yaml
mdtoepub/data/sample_book_textbook_en/: project.yaml
mdtoepub/lang-specs/: mdtoepub-help.lang
mdtoepub/locale/: mdtoepub.pot
mdtoepub/models/: __init__.py  component.py  project.py  theme.py
mdtoepub/services/: __init__.py  caption_processor.py  component_service.py  epub_service.py  figure_table_processor.py  file_service.py  footnote_processor.py  footnotes_processor.py  header_builder.py  image_service.py  import_service.py  labels_service.py  markdown_service.py  project_service.py  spell_service.py  style_doc_service.py  style_manager.py  theme_service.py  toc_builder.py  variable_interpolator.py  yaml_service.py
mdtoepub/themes/classic/: acknowledgement.css  afterword.css  appendix.css  author.css  chapter.css  conclusion.css  cover.css  dedication.css  edition.css  epilogue.css  foreword.css  glossary.css  introduction.css  license.css  (+9 more)
mdtoepub/utils/: dialogs.py
mdtoepub/views/: editor_view.py  main_window.py  project_tree.py  project_tree_actions.py  recent_projects_manager.py  spell_check_handler.py  styles_panel.py
tests/test_models/: test_component.py  test_project.py  test_theme.py
tests/test_services/: test_epub_service.py  test_file_service.py  test_image_service.py  test_labels_service.py  test_markdown_service.py  test_style_doc_service.py  test_yaml_service.py
tools/: compile_locales.py
(+150 files in other folders)
