[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdtoepub"
version = "1.4.0"
description = "Aplicacion para producir libros EPUB a partir de Markdown"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "markdown>=3.4",
    "Pygments>=2.0",
    "ebooklib>=0.18",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
gui = [
    "PyGObject>=3.42.0",
    "pycairo>=1.20.0",
]

[project.scripts]
mdtoepub = "mdtoepub.main:main"
mdtoepub-run = "mdtoepub.main:main_with_system_gtk"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["mdtoepub*"]

[tool.setuptools.package-data]
mdtoepub = [
    "themes/**/*.css",
    "themes/**/*.yaml",
    "data/**/*.md",
    "data/**/*.yaml",
    "data/**/*.png",
    "data/**/*.jpg",
    "lang-specs/*.lang",
]
